Bughunting and filter with larger font on mobile

--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -26,6 +26,7 @@ a {
 
 .mini-toggler {
   span {
+    font-size: $font-size-lg;
     width: 10px;
     @extend .rotate-animate;
     @extend .rotate-0;
