--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -6,16 +6,12 @@
   font-family: $font-family-base;
 }
 
-h1, .h1 {
-  // @extend .text-serif;
-}
+// h1, .h1 {
+//   // @extend .text-serif;
+// }
 
 .lead {
   letter-spacing: 0.05rem;
-}
-
-.text-size-base {
-  font-size: $font-size-base !important;
 }
 
 .text-normal, // <- TODO remove
@@ -26,4 +22,29 @@ h1, .h1 {
 .text-underline, // <- TODO remove
 .text-decoration-underline {
   text-decoration: underline !important;
+}
+
+
+@each $breakpoint in map-keys($grid-breakpoints) {
+  $infix: breakpoint-infix($breakpoint, $grid-breakpoints);
+  @include media-breakpoint-up($breakpoint) {
+    &.font-size#{$infix}-base {
+      font-size: $font-size-base !important;
+    }
+    &.font-size#{$infix}-small {
+      font-size: $font-size-sm !important;
+    }
+    &.font-size#{$infix}-large {
+      font-size: $font-size-lg !important;
+    }
+    &.font-weight#{$infix}-light {
+      font-weight: $font-weight-normal !important;
+    }
+    &.font-weight#{$infix}-normal {
+      font-weight: $font-weight-normal !important;
+    }
+    &.font-weight#{$infix}-bold {
+      font-weight: $font-weight-bold !important;
+    }
+  }
 }
