--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -110,7 +110,9 @@ $enable-transitions:        true;
 $enable-hover-media-query:  false; // Deprecated, no longer affects any compiled CSS
 $enable-grid-classes:       true;
 $enable-print-styles:       true;
-
+$enable-responsive-font-sizes:                true; // false !default;
+$enable-validation-icons:                     false; // true !default;
+$enable-deprecation-messages:                 true !default;
 
 // Spacing
 //
